INTYG-5785: Uppdaterat texten om frågor och svar till ärenden

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-normal-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-normal-partial.html
@@ -128,7 +128,7 @@
     <p>Du som är privatläkare får också ett mejl till den e-post du angav när du registrerade dig till att använda Webcert.</p>
   </wc-faq-question>
 
-  <wc-faq-question title="När försvinner frågor från listan under fliken &quot;Frågor och svar&quot; ?">
+  <wc-faq-question title="När försvinner frågor från listan under fliken &quot;Ej hanterade ärenden&quot; ?">
     <p>En fråga försvinner aldrig från listan över frågor och svar, däremot så visas den inte i listan när den är markerad som hanterad. Det går att söka efter och se en hanterad fråga med hjälp av sökfiltret.</p>
   </wc-faq-question>
 
