--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-uthopp-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-uthopp-partial.html
@@ -16,7 +16,7 @@
       markera svaret som hanterat eller vidarebefordra frågan/svaret till rätt läkare.</p>
   </wc-faq-question>
 
-  <wc-faq-question title="När försvinner frågor från listan under fliken &quot;Frågor och svar&quot; ?">
+  <wc-faq-question title="När försvinner frågor från listan under fliken &quot;Ej hanterade ärendenr&quot; ?">
     <p>En fråga försvinner aldrig från listan över frågor och svar, däremot så visas den inte i listan när den är
       markerad som hanterad. Det går att söka efter och se en hanterad fråga med hjälp av sökfiltret.</p>
   </wc-faq-question>
