INTYG-6093: La till padding.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.scss
@@ -19,4 +19,13 @@
 
 wc-utkast-header .wc-page-header {
   padding: 10px 28px 10px 28px;
+
+  .page-heading1 {
+    padding: 16px 0 0 0;
+  }
+
+  .page-heading2 {
+    padding: 8px 0 4px 0;
+  }
+
 }
