--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -67,6 +67,7 @@
   @import 'components/wcHelpChevron/wcHelpChevron.directive.scss';
   @import 'components/wcHelpChevronText/wcHelpChevronText.directive.scss';
   @import 'components/wcIntegrationEnhetSelector/_wcIntegrationEnhetSelector.directive.scss';
+  @import 'components/wcIntygHasKompletteringMessage/wcIntygHasKompletteringMessage.directive.scss';
   @import 'components/wcIntygPatientNamnPersonnummer/wcIntygPatientNamnPersonnummer.directive.scss';
   @import 'components/wcNewPersonIdMessage/wcNewPersonIdMessage.scss';
   @import 'components/wcPatientAddressMissingFromIntegrationMessage/wcPatientAddressMissingFromIntegrationMessage.scss';
