INTYG-5915: Lägger till "Re: " i ämnesraden för svar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeader.directive.html
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <arende-panel-header-amne arende-list-item="arendeListItem"></arende-panel-header-amne>
+    <arende-panel-header-amne arende-list-item="arendeListItem" header-type="headerType"></arende-panel-header-amne>
   </div>
 
   <div class="arende-header-right">
