INTYG-6084: Stylat om ärendekommunkation i högerfältet

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.html
@@ -17,3 +17,4 @@
     <arende-panel-fraga arende-panel-fraga arende-list-item="arendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></arende-panel-fraga>
 
 </div>
+<div data-ng-if="!lastCard" class="card-divider"></div>
