INTYG-6099: justerat line-height på wc-help-chevron texter

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
@@ -42,6 +42,7 @@
   margin-bottom: 15px;
 }
 .wc-help-chevron__textarea {
+  line-height: 19px;
   .scrollable-body {
     padding: 20px;
     max-height: 190px; // 190 - padding = 140 = 7 text rows
