INTYG-5948: Lagt till tangentbordsnavigering för wcDropdown

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDropdown/wcDropdown.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDropdown/wcDropdown.directive.scss
@@ -76,7 +76,7 @@ wc-dropdown {
         div {
             padding: 4px 10px;
             color: $wc-color-07;
-            &:hover {
+            &:hover, &.selected {
                 background-color: $wc-color-21;
                 color: #fff;
                 cursor: pointer;
