INTYG-6089: Scrollar till toppen när man öppnar en accordion

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.html
@@ -1,4 +1,4 @@
-<div class="scrollable-body" ng-transclude></div>
-<div class="bottom-fadeout-gradient wc-color-{{color}}">
+<div class="scrollable-body" data-ng-attr-id="{{::scrollId}}" ng-transclude></div>
+<div class="bottom-fadeout-gradient wc-color-{{::color}}">
   <div></div>
 </div>
