--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
@@ -41,6 +41,7 @@ wc-bottom-fadeout {
   .scrollable-body {
     overflow-y: auto;
     max-height: 50vh;
+    position: relative;
 
     .modal-body {
       margin: 15px 15px $wc-text-fadeout-height;
