--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
@@ -2,10 +2,9 @@
   <button type="button" class="close" data-ng-click="close()">×</button>
   <h3 id="omWebcertDialog">Om Webcert</h3>
 </div>
-<wc-bottom-fadeout default-height="75vh">
-  <div class="modal-body wc-header-about-modal" id="wc-about-modal-body">
-    <div uib-accordion close-others="true"
-         ng-init="open = { om: false, terms: false, support: false, faq: false, kakor: false }">
+<wc-bottom-fadeout default-height="75vh" scroll-id="wc-about-modal-body">
+  <div class="modal-body wc-header-about-modal">
+    <div uib-accordion close-others="true">
       <div uib-accordion-group panel-class="wc-about-panel" is-open="open.om">
         <div uib-accordion-heading>
           <div class="wc-about-panel-header">
