INTYG-5954: Visar outline vid focus

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevron/wcHelpChevron.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevron/wcHelpChevron.directive.scss
@@ -31,5 +31,9 @@
     background-color: transparent;
     color: $wc-color-16;
     outline: none;
+
+    &:focus {
+      outline: 1px dotted $wc-color-07;
+    }
   }
 }
