--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcPatientInfoChangeMessage/wcPatientInfoChangeMessageModal.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcPatientInfoChangeMessage/wcPatientInfoChangeMessageModal.template.html
@@ -4,5 +4,5 @@
 <div class="modal-body" ng-bind-html="body">
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" id="confirmationOkButton" ng-click="$close()">Stäng</button>
+  <button type="button" class="btn btn-default" id="confirmationOkButton" ng-click="$close()">Stäng</button>
 </div>
