--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.scss
@@ -1,17 +1,22 @@
 .intyg-send {
 
-
- /* .modal-body {
-    margin-bottom: 42px;
-  }*/
   .lisjp-observandum {
     display: flex;
     flex-direction: row;
     background-color: $wc-color-02;
     padding: 3px;
-
   }
+
   .lisjp-observandum-text {
     padding: 2px;
+  }
+
+  .button-wrapper {
+    display: flex;
+    flex-direction: row;
+
+      wc-button {
+        padding: 0 10px 0 0;
+      }
   }
  }
