--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body wc-header-about-modal" id="wc-about-modal-body">
   <div uib-accordion close-others="true"
-       ng-init="open = { om: false, terms: false, support: false, faq: false, kakor: false }">
+       ng-init="open = { om: false, terms: false, support: false, faq: false, kakor: false, personuppgifter: false }">
     <div uib-accordion-group panel-class="wc-about-panel" is-open="open.om">
       <div uib-accordion-heading>
         <div class="wc-about-panel-header">
@@ -57,8 +57,18 @@
       <div ng-include="'/web/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/kakor-partial.html'"></div>
     </div>
 
+    <div uib-accordion-group panel-class="wc-about-panel" is-open="open.personuppgifter">
+      <div uib-accordion-heading>
+        <div class="wc-about-panel-header">
+          <span>Om behandling av personuppgifter</span> <i class="material-icons md-24">{{open.personuppgifter ? 'expand_less':'expand_more'}}</i>
+        </div>
+      </div>
+      <div ng-include="'/web/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/about-personuppgifter.html'"></div>
+
+    </div>
+
   </div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" ng-click="$close()">Stäng</button>
+  <button type="button" class="btn btn-default" ng-click="$close()">Stäng</button>
 </div>
