INTYG-6127: IE11 fixar för visning av låsta utkast

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
@@ -34,7 +34,13 @@
     &:disabled, fieldset[disabled] & {
       background-color: $wc-color-20;
       color: $wc-color-09;
+      pointer-events: none; /* this is a workaround for fieldset[disabled] not working correctly in IE11 */
     }
+  }
+
+  /* this is a workaround for fieldset[disabled] not working correctly in IE11 */
+  fieldset[disabled] & {
+    cursor:not-allowed;
   }
 
   .btn-default {
