--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDropdown/wcDropdown.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDropdown/wcDropdown.directive.scss
@@ -53,6 +53,9 @@ wc-dropdown {
             cursor: pointer;
             box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12);
         }
+        &:focus {
+            outline: none;
+        }
     }
 
     &[disabled] .dropdown-label, fieldset[disabled] & .dropdown-label {
