--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevron/wcHelpChevron.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevron/wcHelpChevron.directive.scss
@@ -25,6 +25,7 @@
   .wc-help-chevron__button {
     font-size: 14px;
     font-weight: normal;
+    text-decoration: none;
     border: none;
     margin: 0;
     padding: 0 5px;
