--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTypeahead/ueTypeahead.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTypeahead/ueTypeahead.directive.html
@@ -1,7 +1,7 @@
 <div class="input-full ue-del-fraga">
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
     <ue-label config="::config.label" model="::model"></ue-label>
-    <div>
+    <div class="input-wrapper">
       <input type="text"
              class="form-control"
              ng-attr-id="{{::config.modelProp|ueDomIdFilter}}"
