--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueYear/ueYear.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueYear/ueYear.directive.scss
@@ -18,6 +18,9 @@
  */
 
 ue-year {
+
+  @extend %field-set-disabled-ie11-fix;
+
   input.form-control {
     width: 4em;
     &:disabled, fieldset[disabled] & {
