--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -146,6 +146,7 @@
   @import 'utkast/unified-edit/components/ueText/ueText.directive.scss';
   @import 'utkast/unified-edit/components/ueTextarea/ueTextArea.directive.scss';
   @import 'utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss';
+  @import 'utkast/unified-edit/components/ueTypeahead/ueTypeAhead.directive.scss';
   @import 'utkast/unified-edit/components/ueVagueDate/ueVagueDate.scss';
   @import 'utkast/unified-edit/components/ueYear/ueYear.directive.scss';
   @import 'utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.scss';
