--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
@@ -42,7 +42,7 @@
         </tr>
         <tr class="diagnos-row" ng-repeat="diagnos in model[config.modelProp]">
             <td class="code-column">
-                <div>
+                <div class="input-wrapper">
                     <input type="text" class="col-xs-11 form-control" ng-attr-id="diagnoseCode-{{::$index|ueDomIdFilter}}"
                            name="diagnoseCode{{::$index}}"
                            value=""
@@ -74,7 +74,7 @@
                       </ul>
                 </span>
             </td>
-            <td class="diagnos-description-column">
+            <td class="diagnos-description-column input-wrapper">
                 <input type="text" class="col-xs-12 form-control column-width" ng-attr-id="diagnoseDescription-{{::$index|ueDomIdFilter}}"
                        ng-class="{'validation-error' : hasValidationError('diagnosbeskrivning', $index)}"
                        name="diagnose.description"
