--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.scss
@@ -19,6 +19,8 @@
 
 .dodsorsak-multi {
 
+  @extend %field-set-disabled-ie11-fix;
+
   .label-padding {
     display: inline-block;
     padding: 10px 0;
