--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.html
@@ -1,11 +1,13 @@
 <div class="ue-del-fraga">
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
-  <input ng-attr-id="{{::config.modelProp|ueDomIdFilter}}" type="text" class="form-control"
-         ng-model="modelGetterSetter"
-         ng-model-options="{ getterSetter: true }"
-         ng-blur="updateValidation()"
-         ng-disabled="::config.disabled"
-         ue-decimal-ts-syn="2"
-         maxlength="4">
+    <div class="input-wrapper">
+      <input ng-attr-id="{{::config.modelProp|ueDomIdFilter}}" type="text" class="form-control"
+             ng-model="modelGetterSetter"
+             ng-model-options="{ getterSetter: true }"
+             ng-blur="updateValidation()"
+             ng-disabled="::config.disabled"
+             ue-decimal-ts-syn="2"
+             maxlength="4">
+    </div>
   </ue-validation-wrapper>
 </div>
