--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextarea/ueTextArea.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextarea/ueTextArea.directive.scss
@@ -5,6 +5,12 @@ ue-textarea {
     &:disabled, fieldset[disabled] & {
       background-color: $wc-color-20;
       color: $wc-color-09;
+      pointer-events: none; /* this is a workaround for fieldset[disabled] not working correctly in IE11 */
     }
+  }
+
+  /* this wrapper is a workaround for fieldset[disabled] not working correctly in IE11 */
+  fieldset[disabled] & .textarea-wrapper {
+    cursor:not-allowed;
   }
 }
