INTYG-6209: Lagt till stöd för ICF

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -28,6 +28,7 @@
 @import '../app-shared/unified-view/components/uvDelFraga/uvDelFraga.directive.scss';
 @import '../app-shared/unified-view/components/uvEnumValue/uvEnumValue.directive.scss';
 @import '../app-shared/unified-view/components/uvFraga/uvFraga.directive.scss';
+@import '../app-shared/unified-view/components/uvIcf/uvIcf.directive.scss';
 @import '../app-shared/unified-view/components/uvKategori/uvKategori.directive.scss';
 @import '../app-shared/unified-view/components/uvKodverkValue/uvKodverkValue.directive.scss';
 @import '../app-shared/unified-view/components/uvList/uvList.directive.scss';
