--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -31,6 +31,7 @@
   @import '../app-shared/unified-view/components/uvDelFraga/uvDelFraga.directive.scss';
   @import '../app-shared/unified-view/components/uvEnumValue/uvEnumValue.directive.scss';
   @import '../app-shared/unified-view/components/uvFraga/uvFraga.directive.scss';
+  @import '../app-shared/unified-view/components/uvIcf/uvIcf.directive.scss';
   @import '../app-shared/unified-view/components/uvKategori/uvKategori.directive.scss';
   @import '../app-shared/unified-view/components/uvKodverkValue/uvKodverkValue.directive.scss';
   @import '../app-shared/unified-view/components/uvList/uvList.directive.scss';
@@ -140,6 +141,7 @@
   @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss';
   @import 'utkast/unified-edit/components/ueDropdown/ueDropdown.directive.scss';
   @import 'utkast/unified-edit/components/ueFormLabel/ueFormLabel.scss';
+  @import 'utkast/unified-edit/components/ueIcf/ueIcf.directive.scss';
   @import 'utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.scss';
   @import 'utkast/unified-edit/components/uePrognos/uePrognos.directive.scss';
   @import 'utkast/unified-edit/components/ueRadio/ueRadio.directive.scss';
