--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcTableHead/wcTableHead.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcTableHead/wcTableHead.directive.html
@@ -1,3 +1,3 @@
 <a class="wc-table-head unbreakable" uib-popover-html="helpText" popover-trigger="mouseenter" popover-placement="top" popover-popup-delay="300" popover-append-to-body="true">
-    {{text}}<span ng-if="sorting" ng-class="{'icon-sort': !sortingCurrent,'icon-sort-up': sortingCurrent && sortingAscending, 'icon-sort-down': sortingCurrent && !sortingAscending}"></span>
+    {{text}}<span ng-if="sorting" ng-class="{'icon-wc-ikon-42': !sortingCurrent, 'icon-wc-ikon-43': sortingCurrent && sortingAscending, 'icon-wc-ikon-44': sortingCurrent && !sortingAscending}"></span>
 </a>
