--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcTableHead/wcTableHead.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcTableHead/wcTableHead.directive.scss
@@ -7,4 +7,10 @@ a.wc-table-head {
     color: $th-link-color;
     text-decoration: underline;
   }
+  .icon-wc-ikon-42:before,
+  .icon-wc-ikon-43:before,
+  .icon-wc-ikon-44:before {
+    font-size: 11px;
+    margin-left: 5px;
+  }
 }
