--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
@@ -2,14 +2,14 @@
 
   <ue-label config="::config.label" model="::model"></ue-label>
 
-  <div id="{{model.diagnoser[0].diagnosKod}}-{{config.modelProp}}-dropdown"
-       ng-click="openFunktionsDropdown();$event.stopPropagation();" class="dropdown-label"
+  <button type="button" id="{{model.diagnoser[0].diagnosKod}}-{{config.modelProp}}-dropdown"
+       ng-click="openFunktionsDropdown();$event.stopPropagation();" class="btn btn-default icf-button"
        ng-class="{'disabled': !hasICFDiagnos(), 'open': funktionsDropdown}" uib-popover="{{getPopoverText()}}"
        popover-trigger="mouseenter" popover-popup-delay="300" popover-append-to-body="true"
        popover-placement="auto top">
-    <span><i class="material-icons bluetext">lightbulb_outline</i> Ta hjälp av ICF</span>
-    <i class="material-icons">{{isOpen ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</i>
-  </div>
+    <i class="material-icons bluetext">lightbulb_outline</i> Ta hjälp av ICF
+    <i class="material-icons">{{funktionsDropdown ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</i>
+</button>
 
   <div ng-if="funktionsDropdown" id="{{model.diagnoser[0].diagnosKod}}-{{config.modelProp}}-plate"
        class="funktions-dropdown-plate">
@@ -19,9 +19,9 @@
           'Välj enbart de svårigheter som påverkar patientens sysselsättning.' }}</span>
     </div>
     <div class="kategori-content">
-      <span class="kategori-label">ICF-kategori för:</span><br />
+      <span class="kategori-label">ICF-kategorier för:</span><br />
       <strong class="medborder">{{diagnosBeskrivningen()}}</strong>
-      <div ng-repeat="urval in icfFunktioner">
+      <div ng-repeat="urval in icfFunktioner" class="kategori">
         <div class="kategorier">
           <input type="checkbox" class="big-checkbox" ng-model="urval.vald" />
           <span ng-click="toggle(urval)">{{urval.namn}}</span><span class="visamer" ng-click="visamer = !visamer">{{visamer ? 'visa mindre':'visa mer'}} <i
@@ -35,11 +35,13 @@
       </div>
     </div>
 
+    <div class="fader"></div>
+
     <div class="kategori-footer">
       <a href="https://www.socialstyrelsen.se/klassificeringochkoder/koderfunktionstillstandicf" target="_blank">Läs mer
         om ICF hos Socialstyrelsen <i class="external-link-icon material-icons">launch</i></a>
       <input type="button" class="btn btn-secondary kategori-rensa" value="Rensa" ng-click="rensa()" ng-disabled="isInteractionDisabled()"/>
-      <input type="button" class="btn btn-primary kategori-add" ng-disabled="isInteractionDisabled()"
+      <input type="button" class="btn btn-success kategori-add" ng-disabled="isInteractionDisabled()"
              value="{{model[config.kategoriProp].length > 0 ? 'Uppdatera' : 'Lägg till'}}"
              ng-click="add(icfFunktioner)" />
     </div>
@@ -52,11 +54,12 @@
     <span class="problem" ng-repeat="val in model[config.kategoriProp]">{{val}}</span>
   </div>
 
-  <div ng-if="modelGetterSetter() && model[config.kategoriProp].length > 0" class="placeholder">{{getPlaceHolder()}}</div>
+  <div ng-if="(focus || modelGetterSetter()) && model[config.kategoriProp].length > 0" class="placeholder">{{getPlaceHolder()}}</div>
   <textarea ng-attr-id="{{::config.modelProp|ueDomIdFilter}}" name="{{::config.modelProp}}" class="form-control"
             rows="{{::config.rows || 6}}" auto-expand ng-model="modelGetterSetter"
             ng-model-options="{ debounce: 500, getterSetter: true }" maxlength="{{::config.htmlMaxlength || 3500}}"
-            ng-blur="updateValidation()" placeholder="{{model[config.kategoriProp].length > 0 ? getPlaceHolder() : ''}}"
-            ng-class="{'placeholderPadding': modelGetterSetter() && model[config.kategoriProp].length > 0 }">
+            ng-blur="updateValidation();focus=false" placeholder="{{(!focus && !modelGetterSetter()) && model[config.kategoriProp].length > 0 ? getPlaceHolder() : ''}}"
+            ng-class="{'placeholderPadding': (focus || modelGetterSetter()) && model[config.kategoriProp].length > 0 }"
+            ng-focus="focus=true">
   </textarea>
 </ue-validation-wrapper>
