INTYG-5673: Added align items center to work in IE.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeNoKompletteringarMessage/wcArendeNoKompletteringarMessage.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeNoKompletteringarMessage/wcArendeNoKompletteringarMessage.directive.scss
@@ -22,6 +22,7 @@ wc-arende-no-kompletteringar-message {
   background-color: $wc-color-00;
   flex-direction: column;
   padding: 40px;
+  align-items: center;
 
   div {
     margin: auto;
