INTYG-5673: Added trim to message-string to enable button correct.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
@@ -35,7 +35,7 @@
         </wc-alert-message>
 
         <button type="button" class="btn btn-success" ng-click="sendAnswer()"
-                ng-disabled="!arendeSvar.meddelande || arendeSvar.updateInProgress"
+                ng-disabled="!arendeSvar.meddelande || arendeSvar.updateInProgress || onlySpace(arendeSvar.meddelande)"
                 id="sendAnswerBtn-{{arendeSvar.fragaInternReferens}}">
           Skicka
         </button>
