--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/paminnelse/arendePaminnelse.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/paminnelse/arendePaminnelse.directive.html
@@ -10,7 +10,7 @@
       </div>
     </div>
 
-    <div class="arende-meddelande" ng-if="arendeListItem.arende.fraga.meddelande">{{arendeListItem.arende.fraga.meddelande}}</div>
+    <div class="arende-meddelande multiline" ng-if="arendeListItem.arende.fraga.meddelande">{{arendeListItem.arende.fraga.meddelande}}</div>
 
     <div class="arende-svara-senast" ng-if="arendeListItem.arende.fraga.sistaDatumForSvar">
       <i class="material-icons">date_range</i> Svara senast: {{arendeListItem.arende.fraga.sistaDatumForSvar}}
